// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panels View SO Component render panel view container and refresh panel 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    id="panelView"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiPageHeaderSection"
        >
          <h1
            class="euiTitle euiTitle--large"
            data-test-subj="panelNameHeader"
          />
          <div
            class="euiFlexItem"
          >
            <div
              class="euiSpacer euiSpacer--s"
            />
          </div>
          Created on 
          01/01/2024 12:00 AM
        </div>
        <div
          class="euiPageHeaderSection"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                data-test-subj="editPanelButton"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.148 3.148 11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998ZM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1ZM5 14H2v-3l3 3Z"
                    />
                  </svg>
                  <span
                    class="euiButton__text"
                  >
                    Edit
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownCenter"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="panelActionContextMenu"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Dashboard Actions
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownLeft"
                id="addVisualizationContextMenu"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="addVisualizationButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Add visualization
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </header>
      <div
        class="euiPageContentBody"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="autocomplete-2-label"
              class="aa-Autocomplete"
              id="autocomplete-root"
              role="combobox"
            >
              <div
                class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed euiFormControlLayout--group"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    aria-autocomplete="both"
                    aria-labelledby="autocomplete-2-label"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed euiFieldText--inGroup"
                    data-test-subj="searchAutocompleteTextArea"
                    disabled=""
                    enterkeyhint="search"
                    id="autocomplete-textarea"
                    maxlength="16384"
                    placeholder="Use PPL 'where' clauses to add filters on all visualizations [where Carrier = 'OpenSearch-Air']"
                    spellcheck="false"
                    style="margin-top: 0px; height: 18px; padding: 8px;"
                    type="search"
                    value=""
                  />
                </div>
                <button
                  aria-label="ppl-info"
                  class="euiLink euiLink--primary euiFormControlLayout__append"
                  style="padding: 10px;"
                  type="button"
                >
                  PPL
                </button>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--compressed euiFormControlLayout--group euiSuperDatePicker"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownLeft"
                  >
                    <div
                      class="euiPopover__anchor euiQuickSelectPopover__anchor"
                    >
                      <button
                        aria-label="Date quick select"
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                        data-test-subj="superDatePickerToggleQuickMenuButton"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                              fill-rule="non-zero"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M14 4v-.994C14 2.45 13.55 2 12.994 2H11v1h-1V2H6v1H5V2H3.006C2.45 2 2 2.45 2 3.006v9.988C2 13.55 2.45 14 3.006 14h9.988C13.55 14 14 13.55 14 12.994V5H2V4h12zm-3-3h1.994C14.102 1 15 1.897 15 3.006v9.988A2.005 2.005 0 0 1 12.994 15H3.006A2.005 2.005 0 0 1 1 12.994V3.006C1 1.898 1.897 1 3.006 1H5V0h1v1h4V0h1v1zM4 7h2v1H4V7zm3 0h2v1H7V7zm3 0h2v1h-2V7zM4 9h2v1H4V9zm3 0h2v1H7V9zm3 0h2v1h-2V9zm-6 2h2v1H4v-1zm3 0h2v1H7v-1zm3 0h2v1h-2v-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      class="euiDatePickerRange euiDatePickerRange--inGroup"
                    >
                      <button
                        class="euiSuperDatePicker__prettyFormat euiSuperDatePicker__prettyFormat--compressed"
                        data-test-subj="superDatePickerShowDatesButton"
                      >
                        Last 1 day
                        <span
                          class="euiSuperDatePicker__prettyFormatLink"
                        >
                          Show dates
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  class="euiToolTipAnchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small euiSuperUpdateButton"
                    data-test-subj="superDatePickerApplyTimeButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.228 2.942a.5.5 0 1 1-.538.842A5 5 0 1 0 13 8a.5.5 0 1 1 1 0 6 6 0 1 1-2.772-5.058ZM14 1.5v3A1.5 1.5 0 0 1 12.5 6h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 1 1 1 0Z"
                        />
                      </svg>
                      <span
                        class="euiButton__text euiSuperUpdateButton__text"
                      >
                        Refresh
                      </span>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div>
          <div
            class="euiSpacer euiSpacer--xxl"
          />
          <div
            class="euiText euiText--medium"
            data-test-subj="addFirstVisualizationText"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <h2>
                Start by adding your first visualization
              </h2>
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="euiTextColor euiTextColor--subdued"
                >
                  Use PPL Queries to fetch & filter observability data and create visualizations
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownLeft"
                id="addVisualizationContextMenu"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="addVisualizationButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Add visualization
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--xxl"
          />
        </div>
        <div
          class="react-grid-layout layout full-width"
          style="height: 10px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Panels View SO Component render panel view so container and reload dashboard 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    id="panelView"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiPageHeaderSection"
        >
          <h1
            class="euiTitle euiTitle--large"
            data-test-subj="panelNameHeader"
          />
          <div
            class="euiFlexItem"
          >
            <div
              class="euiSpacer euiSpacer--s"
            />
          </div>
          Created on 
          01/01/2024 12:00 AM
        </div>
        <div
          class="euiPageHeaderSection"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                data-test-subj="editPanelButton"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.148 3.148 11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998ZM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1ZM5 14H2v-3l3 3Z"
                    />
                  </svg>
                  <span
                    class="euiButton__text"
                  >
                    Edit
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownCenter"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="panelActionContextMenu"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Dashboard Actions
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownLeft"
                id="addVisualizationContextMenu"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="addVisualizationButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Add visualization
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </header>
      <div
        class="euiPageContentBody"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="autocomplete-5-label"
              class="aa-Autocomplete"
              id="autocomplete-root"
              role="combobox"
            >
              <div
                class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed euiFormControlLayout--group"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    aria-autocomplete="both"
                    aria-labelledby="autocomplete-5-label"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed euiFieldText--inGroup"
                    data-test-subj="searchAutocompleteTextArea"
                    disabled=""
                    enterkeyhint="search"
                    id="autocomplete-textarea"
                    maxlength="16384"
                    placeholder="Use PPL 'where' clauses to add filters on all visualizations [where Carrier = 'OpenSearch-Air']"
                    spellcheck="false"
                    style="margin-top: 0px; height: 18px; padding: 8px;"
                    type="search"
                    value=""
                  />
                </div>
                <button
                  aria-label="ppl-info"
                  class="euiLink euiLink--primary euiFormControlLayout__append"
                  style="padding: 10px;"
                  type="button"
                >
                  PPL
                </button>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--compressed euiFormControlLayout--group euiSuperDatePicker"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownLeft"
                  >
                    <div
                      class="euiPopover__anchor euiQuickSelectPopover__anchor"
                    >
                      <button
                        aria-label="Date quick select"
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                        data-test-subj="superDatePickerToggleQuickMenuButton"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                              fill-rule="non-zero"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M14 4v-.994C14 2.45 13.55 2 12.994 2H11v1h-1V2H6v1H5V2H3.006C2.45 2 2 2.45 2 3.006v9.988C2 13.55 2.45 14 3.006 14h9.988C13.55 14 14 13.55 14 12.994V5H2V4h12zm-3-3h1.994C14.102 1 15 1.897 15 3.006v9.988A2.005 2.005 0 0 1 12.994 15H3.006A2.005 2.005 0 0 1 1 12.994V3.006C1 1.898 1.897 1 3.006 1H5V0h1v1h4V0h1v1zM4 7h2v1H4V7zm3 0h2v1H7V7zm3 0h2v1h-2V7zM4 9h2v1H4V9zm3 0h2v1H7V9zm3 0h2v1h-2V9zm-6 2h2v1H4v-1zm3 0h2v1H7v-1zm3 0h2v1h-2v-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      class="euiDatePickerRange euiDatePickerRange--inGroup"
                    >
                      <button
                        class="euiSuperDatePicker__prettyFormat euiSuperDatePicker__prettyFormat--compressed"
                        data-test-subj="superDatePickerShowDatesButton"
                      >
                        Last 1 day
                        <span
                          class="euiSuperDatePicker__prettyFormatLink"
                        >
                          Show dates
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  class="euiToolTipAnchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small euiSuperUpdateButton"
                    data-test-subj="superDatePickerApplyTimeButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.228 2.942a.5.5 0 1 1-.538.842A5 5 0 1 0 13 8a.5.5 0 1 1 1 0 6 6 0 1 1-2.772-5.058ZM14 1.5v3A1.5 1.5 0 0 1 12.5 6h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 1 1 1 0Z"
                        />
                      </svg>
                      <span
                        class="euiButton__text euiSuperUpdateButton__text"
                      >
                        Refresh
                      </span>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div>
          <div
            class="euiSpacer euiSpacer--xxl"
          />
          <div
            class="euiText euiText--medium"
            data-test-subj="addFirstVisualizationText"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <h2>
                Start by adding your first visualization
              </h2>
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="euiTextColor euiTextColor--subdued"
                >
                  Use PPL Queries to fetch & filter observability data and create visualizations
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownLeft"
                id="addVisualizationContextMenu"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="addVisualizationButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Add visualization
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--xxl"
          />
        </div>
        <div
          class="react-grid-layout layout full-width"
          style="height: 10px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Panels View SO Component renders panel view SO container without visualizations 1`] = `null`;

exports[`Panels View SO Component renders panels view SO container with visualizations 1`] = `
<div>
  <div
    class="euiPage euiPage--paddingMedium euiPage--grow"
    id="panelView"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiPageHeaderSection"
        >
          <h1
            class="euiTitle euiTitle--large"
            data-test-subj="panelNameHeader"
          />
          <div
            class="euiFlexItem"
          >
            <div
              class="euiSpacer euiSpacer--s"
            />
          </div>
          Created on 
          01/01/2024 12:00 AM
        </div>
        <div
          class="euiPageHeaderSection"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <button
                class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
                data-test-subj="editPanelButton"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.148 3.148 11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998ZM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1ZM5 14H2v-3l3 3Z"
                    />
                  </svg>
                  <span
                    class="euiButton__text"
                  >
                    Edit
                  </span>
                </span>
              </button>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownCenter"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="panelActionContextMenu"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Dashboard Actions
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownLeft"
                id="addVisualizationContextMenu"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="addVisualizationButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Add visualization
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </header>
      <div
        class="euiPageContentBody"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="autocomplete-1-label"
              class="aa-Autocomplete"
              id="autocomplete-root"
              role="combobox"
            >
              <div
                class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed euiFormControlLayout--group"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <input
                    aria-autocomplete="both"
                    aria-labelledby="autocomplete-1-label"
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed euiFieldText--inGroup"
                    data-test-subj="searchAutocompleteTextArea"
                    disabled=""
                    enterkeyhint="search"
                    id="autocomplete-textarea"
                    maxlength="16384"
                    placeholder="Use PPL 'where' clauses to add filters on all visualizations [where Carrier = 'OpenSearch-Air']"
                    spellcheck="false"
                    style="margin-top: 0px; height: 18px; padding: 8px;"
                    type="search"
                    value=""
                  />
                </div>
                <button
                  aria-label="ppl-info"
                  class="euiLink euiLink--primary euiFormControlLayout__append"
                  style="padding: 10px;"
                  type="button"
                >
                  PPL
                </button>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper"
            >
              <div
                class="euiFlexItem"
              >
                <div
                  class="euiFormControlLayout euiFormControlLayout--compressed euiFormControlLayout--group euiSuperDatePicker"
                >
                  <div
                    class="euiPopover euiPopover--anchorDownLeft"
                  >
                    <div
                      class="euiPopover__anchor euiQuickSelectPopover__anchor"
                    >
                      <button
                        aria-label="Date quick select"
                        class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                        data-test-subj="superDatePickerToggleQuickMenuButton"
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                        >
                          <svg
                            aria-hidden="true"
                            class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                            focusable="false"
                            height="16"
                            role="img"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                              fill-rule="non-zero"
                            />
                          </svg>
                          <span
                            class="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M14 4v-.994C14 2.45 13.55 2 12.994 2H11v1h-1V2H6v1H5V2H3.006C2.45 2 2 2.45 2 3.006v9.988C2 13.55 2.45 14 3.006 14h9.988C13.55 14 14 13.55 14 12.994V5H2V4h12zm-3-3h1.994C14.102 1 15 1.897 15 3.006v9.988A2.005 2.005 0 0 1 12.994 15H3.006A2.005 2.005 0 0 1 1 12.994V3.006C1 1.898 1.897 1 3.006 1H5V0h1v1h4V0h1v1zM4 7h2v1H4V7zm3 0h2v1H7V7zm3 0h2v1h-2V7zM4 9h2v1H4V9zm3 0h2v1H7V9zm3 0h2v1h-2V9zm-6 2h2v1H4v-1zm3 0h2v1H7v-1zm3 0h2v1h-2v-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="euiFormControlLayout__childrenWrapper"
                  >
                    <div
                      class="euiDatePickerRange euiDatePickerRange--inGroup"
                    >
                      <button
                        class="euiSuperDatePicker__prettyFormat euiSuperDatePicker__prettyFormat--compressed"
                        data-test-subj="superDatePickerShowDatesButton"
                      >
                        Last 1 day
                        <span
                          class="euiSuperDatePicker__prettyFormatLink"
                        >
                          Show dates
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span
                  class="euiToolTipAnchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small euiSuperUpdateButton"
                    data-test-subj="superDatePickerApplyTimeButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.228 2.942a.5.5 0 1 1-.538.842A5 5 0 1 0 13 8a.5.5 0 1 1 1 0 6 6 0 1 1-2.772-5.058ZM14 1.5v3A1.5 1.5 0 0 1 12.5 6h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 1 1 1 0Z"
                        />
                      </svg>
                      <span
                        class="euiButton__text euiSuperUpdateButton__text"
                      >
                        Refresh
                      </span>
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div>
          <div
            class="euiSpacer euiSpacer--xxl"
          />
          <div
            class="euiText euiText--medium"
            data-test-subj="addFirstVisualizationText"
          >
            <div
              class="euiTextAlign euiTextAlign--center"
            >
              <h2>
                Start by adding your first visualization
              </h2>
              <div
                class="euiSpacer euiSpacer--m"
              />
              <div
                class="euiText euiText--medium"
              >
                <div
                  class="euiTextColor euiTextColor--subdued"
                >
                  Use PPL Queries to fetch & filter observability data and create visualizations
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--m"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiPopover euiPopover--anchorDownLeft"
                id="addVisualizationContextMenu"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButton euiButton--primary euiButton--small"
                    data-test-subj="addVisualizationButton"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButton__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButton__text"
                      >
                        Add visualization
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiSpacer euiSpacer--xxl"
          />
        </div>
        <div
          class="react-grid-layout layout full-width"
          style="height: 10px;"
        />
      </div>
    </div>
  </div>
</div>
`;
